--- a/trunk/html/patrodent_003.htm
+++ b/trunk/html/patrodent_003.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Situacion </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_003_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
@@ -21,11 +21,11 @@
 	<span id="e25" class="deco"></span>
 	<span id="e24" class="navigation_box"></span>
 	<h4 id="e23" class="page_tag">
-		<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14&amp;output=embed&amp;s=AARTsJrpOW7bSgyMQQyecSfQD5_LKTW3gA"></iframe><br /><small><a href="http://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14" style="color:#0000ff;text-align:left">Ver mapa más grande</a></small>
-		Plano de Situación</a>
+		<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14&amp;output=embed&amp;s=AARTsJrpOW7bSgyMQQyecSfQD5_LKTW3gA"></iframe><br /><small><a href="http://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14" style="color:#0000ff;text-align:left">Ver mapa mÃ¡s grande</a></small>
+		Plano de SituaciÃ³n</a>
 	</h4>
 	<div id="e22" class="info">
-		La clínica de la Dra. Patrocinio Gómez está situada en la céntrica calle Marqués de Paradas en la entrada a Sevilla por PLAZA DE ARMAS, teniendo en los alrededores varios parking públicos y un centro comercial de ocio en Plaza de Armas, con tiendas de prestigio, salas de cine, etc ...  
+		La clÃ­nica de la Dra. Patrocinio GÃ³mez estÃ¡ situada en la cÃ©ntrica calle MarquÃ©s de Paradas en la entrada a Sevilla por PLAZA DE ARMAS, teniendo en los alrededores varios parking pÃºblicos y un centro comercial de ocio en Plaza de Armas, con tiendas de prestigio, salas de cine, etc ...  
 	</div>
 	<span id="e21"></span>
 	<h4 id="e20" class="page_tag">
@@ -41,16 +41,16 @@
 		DENT
 	</div>
 	<div id="e16" class="cc25">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e15" class="cc26">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e14" class="cc27">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -59,7 +59,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e12" class="page_tag">
 		CONSULTA
@@ -95,7 +95,7 @@
 		Volver      </a>
 	</div>
 	<h4 id="e1" class="page_tag">
-		Plano de Situación
+		Plano de SituaciÃ³n
 	</h4>
 </div>
 </body>
