--- a/trunk/html/patrodent_004.htm
+++ b/trunk/html/patrodent_004.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Instalaciones </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_004_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
@@ -24,8 +24,8 @@
 		Instalaciones
 	</h4>
 	<div id="e25" class="info">
-		La clínica esta dotada de 3 gabinetes completos, con radiologia digital.<br> 
-		Sala de rayos  completamente aislada para la realización de panorex y telerradiografías. Sala de esterilización y limpieza del instrumental, junto con una zona de preparación de modelos de escayola (recortadora de modelos) y microarenadora para limpieza de braquets.<br> 
+		La clÃ­nica esta dotada de 3 gabinetes completos, con radiologia digital.<br> 
+		Sala de rayos  completamente aislada para la realizaciÃ³n de panorex y telerradiografÃ­as. Sala de esterilizaciÃ³n y limpieza del instrumental, junto con una zona de preparaciÃ³n de modelos de escayola (recortadora de modelos) y microarenadora para limpieza de braquets.<br> 
 		<br> 
 		<br> 
 		<br> 
@@ -33,9 +33,9 @@
 		<br> 
 		<br> 
 		<br> 
-		Cada uno de nuestros gabinetes de tratamiento y prevención, así como nuestras salas de rayos y de esterilización, se encuentran completamente equipados para poderle ofrecer el máximo nivel de calidad y seguridad en todos nuestros tratamientos.<br> 
-		La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.<br> 
-		Un despacho para la atención personal de la doctora con el paciente, la recepción y una sala de espera muy confortable completan el conjunto de la clínica.
+		Cada uno de nuestros gabinetes de tratamiento y prevenciÃ³n, asÃ­ como nuestras salas de rayos y de esterilizaciÃ³n, se encuentran completamente equipados para poderle ofrecer el mÃ¡ximo nivel de calidad y seguridad en todos nuestros tratamientos.<br> 
+		La radiologÃ­a digital nos permite obtener radiografÃ­as en menor tiempo y reducir en un 80% la dosis de radiaciÃ³n que reciben nuestros pacientes.<br> 
+		Un despacho para la atenciÃ³n personal de la doctora con el paciente, la recepciÃ³n y una sala de espera muy confortable completan el conjunto de la clÃ­nica.
 	</div>
 	<span id="e24"></span>
 	<h4 id="e23" class="page_tag">
@@ -51,16 +51,16 @@
 		DENT
 	</div>
 	<div id="e19" class="cc34">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e18" class="cc35">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e17" class="cc36">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -69,7 +69,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e15" class="page_tag">
 		CONSULTA
