--- a/trunk/html/patrodent_006.htm
+++ b/trunk/html/patrodent_006.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Serv1 </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_006_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
@@ -36,16 +36,16 @@
 		DENT
 	</div>
 	<div id="e25" class="cc54">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e24" class="cc55">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e23" class="cc56">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -54,7 +54,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e21" class="page_tag">
 		CONSULTA
@@ -71,22 +71,22 @@
 		ODONTOLOGIA GENERAL
 	</div>
 	<div id="e14" class="info">
-		La Clínica de la Dra. Patrocinio Gómez ofrece a todos sus pacientes todos los tratamientos y todas las especialidades de la odontología moderna: Odontología Conservadora y Prevención, Ortodoncia, Periodoncia, Implantología, Prótesis, Cosmética dental, Cirugía, Odontopediatría y Radiología. 
+		La ClÃ­nica de la Dra. Patrocinio GÃ³mez ofrece a todos sus pacientes todos los tratamientos y todas las especialidades de la odontologÃ­a moderna: OdontologÃ­a Conservadora y PrevenciÃ³n, Ortodoncia, Periodoncia, ImplantologÃ­a, PrÃ³tesis, CosmÃ©tica dental, CirugÃ­a, OdontopediatrÃ­a y RadiologÃ­a. 
 	</div>
 	<h4 id="e13" class="page_tag">
 		Consejos y Normas en Higiene Bucal
 	</h4>
 	<div id="e12" class="info">
-		El cepillado de dientes es el primer paso para mantener unos dientes y encías saludables para toda la vida.<br> 
-		El cepillado correcto requiere como mínimo 5 minutos, y es necesario cepillar los dientes después de cada comida. <br> 
-		De los tres cepillados que se deberían hacer durante el día, el más importante y efectivo es el cepillado de antes de ir a dormir, ya que nos mantiene la boca limpia durante muchas horas.
+		El cepillado de dientes es el primer paso para mantener unos dientes y encÃ­as saludables para toda la vida.<br> 
+		El cepillado correcto requiere como mÃ­nimo 5 minutos, y es necesario cepillar los dientes despuÃ©s de cada comida. <br> 
+		De los tres cepillados que se deberÃ­an hacer durante el dÃ­a, el mÃ¡s importante y efectivo es el cepillado de antes de ir a dormir, ya que nos mantiene la boca limpia durante muchas horas.
 	</div>
 	<h4 id="e11" class="page_tag">
-		Técnica para un Cepillado de Dientes correcto
+		TÃ©cnica para un Cepillado de Dientes correcto
 	</h4>
 	<div id="e10" class="info">
 		Es necesario que el cepillo sea nuevo y no tenga las puntas de las cerdas dobladas. <br> 
-		Para cepillar las superficies externas de los dientes, inclinar 45º el cepillo respecto al diente  e intentar que las puntas del cepillo se insinúen hacia dentro de la encía. 
+		Para cepillar las superficies externas de los dientes, inclinar 45Âº el cepillo respecto al diente  e intentar que las puntas del cepillo se insinÃºen hacia dentro de la encÃ­a. 
 	</div>
 	<span id="e9" class="cc59"></span>
 	<span id="e8" class="cc59"></span>
