--- a/trunk/html/patrodent_007.htm
+++ b/trunk/html/patrodent_007.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Serv2 </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_007_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
@@ -36,16 +36,16 @@
 		DENT
 	</div>
 	<div id="e20" class="cc65">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e19" class="cc66">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e18" class="cc67">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -54,7 +54,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e16" class="page_tag">
 		CONSULTA
@@ -71,12 +71,12 @@
 		ESTETICA DENTAL. BLANQUEAMIENTO
 	</div>
 	<div id="e9" class="info">
-		El enfoque de este campo de la odontología es hacia la conservación de los dientes en la boca tratando de evitar la extracción. Cuando el diente ha sido agredido por una caries, se debe limpiar el tejido dañado y realizar una obturación. Cuando la profundidad de la lesión es desfavorable con respecto al nervio, nuestro tratamiento será realizar la endodoncia. Posteriormente, la pieza será reconstruida y en muchas ocasiones restaurada por una corona de porcelana.<br> 
-		Todos nuestros tratamientos, en éste como en los demás campos, persiguen conseguir el mejor resultado. En esta línea son llamativos los resultados que se consiguen con las técnicas de blanqueamiento dental.
+		El enfoque de este campo de la odontologÃ­a es hacia la conservaciÃ³n de los dientes en la boca tratando de evitar la extracciÃ³n. Cuando el diente ha sido agredido por una caries, se debe limpiar el tejido daÃ±ado y realizar una obturaciÃ³n. Cuando la profundidad de la lesiÃ³n es desfavorable con respecto al nervio, nuestro tratamiento serÃ¡ realizar la endodoncia. Posteriormente, la pieza serÃ¡ reconstruida y en muchas ocasiones restaurada por una corona de porcelana.<br> 
+		Todos nuestros tratamientos, en Ã©ste como en los demÃ¡s campos, persiguen conseguir el mejor resultado. En esta lÃ­nea son llamativos los resultados que se consiguen con las tÃ©cnicas de blanqueamiento dental.
 	</div>
 	<span id="e8" class="cc70"></span>
 	<div id="e7" class="info">
-		El sistema de blanqueamiento dental profesional consiste en aislar el diente de la encia colocando un gel sobre el diente que será activado con calor mediante unas lámparas de LED y además llevará el complemento de un blanqueamiento dental ambulatorio que se realizará en casa mediante aplicación de un gel blanqueador en unas cubetas a medida que se utilizaran durante la noche. Como efecto secundario podrá aparecer una ligera sensibilidad que será transitoria. Las indicaciones del profesional le ayudaran a prevenir los efectos secundarios y controlar los resultados del tratamiento.
+		El sistema de blanqueamiento dental profesional consiste en aislar el diente de la encia colocando un gel sobre el diente que serÃ¡ activado con calor mediante unas lÃ¡mparas de LED y ademÃ¡s llevarÃ¡ el complemento de un blanqueamiento dental ambulatorio que se realizarÃ¡ en casa mediante aplicaciÃ³n de un gel blanqueador en unas cubetas a medida que se utilizaran durante la noche. Como efecto secundario podrÃ¡ aparecer una ligera sensibilidad que serÃ¡ transitoria. Las indicaciones del profesional le ayudaran a prevenir los efectos secundarios y controlar los resultados del tratamiento.
 	</div>
 	<div id="e6" class="cc71">
 		<a href="patrodent_002.htm">
