--- a/trunk/html/patrodent_008.htm
+++ b/trunk/html/patrodent_008.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Serv3 </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_008_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
@@ -36,16 +36,16 @@
 		DENT
 	</div>
 	<div id="e19" class="cc76">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e18" class="cc77">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e17" class="cc78">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -54,7 +54,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e15" class="page_tag">
 		CONSULTA
@@ -71,11 +71,11 @@
 		ODONTOPEDIATRIA
 	</div>
 	<div id="e8" class="info">
-		La odontología infantil constituye una especialidad, porque el trato de los niños así como su tratamiento son distintos de los de los adultos.<br> 
+		La odontologÃ­a infantil constituye una especialidad, porque el trato de los niÃ±os asÃ­ como su tratamiento son distintos de los de los adultos.<br> 
 		<br> 
-		Lo fundamental es conseguir la total confianza del niño para que colabore como paciente y esto requiere un acercamiento progresivo y unos tiempos mayores que en el caso de los adultos.<br> 
+		Lo fundamental es conseguir la total confianza del niÃ±o para que colabore como paciente y esto requiere un acercamiento progresivo y unos tiempos mayores que en el caso de los adultos.<br> 
 		<br> 
-		La Dra. Patrocinio Gómez está muy habituada, debido a su experiencia, a tratar a los pequeños pacientes con la dedicación y cuidado que esta delicada relación terapéutica requiere.
+		La Dra. Patrocinio GÃ³mez estÃ¡ muy habituada, debido a su experiencia, a tratar a los pequeÃ±os pacientes con la dedicaciÃ³n y cuidado que esta delicada relaciÃ³n terapÃ©utica requiere.
 	</div>
 	<span id="e7" class="cc81"></span>
 	<div id="e6" class="cc82">
