--- a/trunk/html/patrodent_009.htm
+++ b/trunk/html/patrodent_009.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Serv4 </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_009_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
@@ -36,16 +36,16 @@
 		DENT
 	</div>
 	<div id="e21" class="cc87">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e20" class="cc88">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e19" class="cc89">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -54,7 +54,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e17" class="page_tag">
 		CONSULTA
@@ -71,9 +71,9 @@
 		PERIODONCIA
 	</div>
 	<div id="e10" class="info">
-		La PERIODONCIA es una especialidad de la odontología que se dedica a la prevención, diagnóstico y tratamiento de las enfermedades de las encías y los tejidos de soporte de los dientes.<br> 
-		Nuestros tratamientos no tendrían la longevidad que merecen sin una buena eliminación de la placa bacteriana bucal. Una buena higiene es primordial para mantener la salud de los dientes y encías, y más aún cuando somos portadores de prótesis o implantes.<br> 
-		Para ello, nuestro tratamiento ofrece la mejor técnica en la tartrectomía o eliminación del sarro, así como en el tratamiento periodontal mas especifico consistente en el raspado del surco gingival y alisado radicular. La profilaxis y educación en higiene oral son básicas para motivar a nuestro paciente y así conseguir que mantenga bien su higiene oral, mediante las citas periódicas del mantenimiento periodontal.
+		La PERIODONCIA es una especialidad de la odontologÃ­a que se dedica a la prevenciÃ³n, diagnÃ³stico y tratamiento de las enfermedades de las encÃ­as y los tejidos de soporte de los dientes.<br> 
+		Nuestros tratamientos no tendrÃ­an la longevidad que merecen sin una buena eliminaciÃ³n de la placa bacteriana bucal. Una buena higiene es primordial para mantener la salud de los dientes y encÃ­as, y mÃ¡s aÃºn cuando somos portadores de prÃ³tesis o implantes.<br> 
+		Para ello, nuestro tratamiento ofrece la mejor tÃ©cnica en la tartrectomÃ­a o eliminaciÃ³n del sarro, asÃ­ como en el tratamiento periodontal mas especifico consistente en el raspado del surco gingival y alisado radicular. La profilaxis y educaciÃ³n en higiene oral son bÃ¡sicas para motivar a nuestro paciente y asÃ­ conseguir que mantenga bien su higiene oral, mediante las citas periÃ³dicas del mantenimiento periodontal.
 	</div>
 	<span id="e9"></span>
 	<span id="e8"></span>
