--- a/trunk/html/patrodent_010.htm
+++ b/trunk/html/patrodent_010.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Serv5 </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_010_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
@@ -36,16 +36,16 @@
 		DENT
 	</div>
 	<div id="e21" class="cc97">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e20" class="cc98">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e19" class="cc99">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -54,7 +54,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e17" class="page_tag">
 		CONSULTA
@@ -71,8 +71,8 @@
 		ORTODONCIA
 	</div>
 	<div id="e10" class="info">
-		La ortodoncia es una especialidad de la odontología que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias, así como las alteraciones esqueléticas del maxilar y la mandíbula. La corrección de los dientes y de las bases óseas se realiza mediante una serie de aparatos fijos.(técnica multibraquets).<br> 
-		La ortodoncia no tiene edad límite de tratamiento. Los dientes se pueden corregir a cualquier edad. A los niños se les aconseja llevarlos al ortodoncista antes de los seis años para poder detectar alteraciones dentales o esqueléticas importantes de manera precoz y poder corregirlos fácilmente. Gracias a la ortodoncia podemos corregir una estética de la sonrisa muy satisfactoria y mejorar la imagen de cada persona.<br> 
+		La ortodoncia es una especialidad de la odontologÃ­a que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias, asÃ­ como las alteraciones esquelÃ©ticas del maxilar y la mandÃ­bula. La correcciÃ³n de los dientes y de las bases Ã³seas se realiza mediante una serie de aparatos fijos.(tÃ©cnica multibraquets).<br> 
+		La ortodoncia no tiene edad lÃ­mite de tratamiento. Los dientes se pueden corregir a cualquier edad. A los niÃ±os se les aconseja llevarlos al ortodoncista antes de los seis aÃ±os para poder detectar alteraciones dentales o esquelÃ©ticas importantes de manera precoz y poder corregirlos fÃ¡cilmente. Gracias a la ortodoncia podemos corregir una estÃ©tica de la sonrisa muy satisfactoria y mejorar la imagen de cada persona.<br> 
 		<br> 
 		<br> 
 		<br> 
@@ -83,8 +83,8 @@
 		<br> 
 		<br> 
 		<br> 
-		Mi objetivo en los tratamientos de ortodoncia es colocar los dientes de una manera armónica en la boca,para conseguir una función perfecta. Los dientes mal alineados son motivo de demanda cada vez mayor en nuestra sociedad en la que una bonita sonrisa es un valor de primer orden. Por otro lado, un buen engranaje dental puede favorecer la función bucal y puede prevenir molestias relacionadas con la articulación témporo-mandibular.<br> 
-		Lo mejor es que la ortodoncia se lleve a cabo en pacientes muy jóvenes puesto que las posibilidades de tratamiento a esa edad son muy grandes, ya que en pleno crecimiento se pueden interceptar y prevenir las posibles maloclusiones. No obstante, cada vez son más los pacientes adultos que se deciden al tratamiento de ortodoncia porque desean mejorar su sonrisa y verse con sus dientes bien alineados. Muchas veces, la ortodoncia es la mejor opción antes de emprender la rehabilitación con prótesis dentales. 
+		Mi objetivo en los tratamientos de ortodoncia es colocar los dientes de una manera armÃ³nica en la boca,para conseguir una funciÃ³n perfecta. Los dientes mal alineados son motivo de demanda cada vez mayor en nuestra sociedad en la que una bonita sonrisa es un valor de primer orden. Por otro lado, un buen engranaje dental puede favorecer la funciÃ³n bucal y puede prevenir molestias relacionadas con la articulaciÃ³n tÃ©mporo-mandibular.<br> 
+		Lo mejor es que la ortodoncia se lleve a cabo en pacientes muy jÃ³venes puesto que las posibilidades de tratamiento a esa edad son muy grandes, ya que en pleno crecimiento se pueden interceptar y prevenir las posibles maloclusiones. No obstante, cada vez son mÃ¡s los pacientes adultos que se deciden al tratamiento de ortodoncia porque desean mejorar su sonrisa y verse con sus dientes bien alineados. Muchas veces, la ortodoncia es la mejor opciÃ³n antes de emprender la rehabilitaciÃ³n con prÃ³tesis dentales. 
 	</div>
 	<span id="e9" class="cc102"></span>
 	<span id="e8" class="cc102"></span>
