--- a/trunk/html/patrodent_012.htm
+++ b/trunk/html/patrodent_012.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
+<!-- Generado por TecnologÃ­a Avanquest v:7.1. Para su mayor informaciÃ³n, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
 	<title> Serv7 </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
-	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
+	<meta name="Description" content="Clinica Dental Patrocinio GÃ³mez MartÃ­nez">
 	<link rel="stylesheet" href="patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="patrodent_012_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
@@ -36,16 +36,16 @@
 		DENT
 	</div>
 	<div id="e19" class="cc118">
-		&nbsp;C/ Marques de Paradas nº 22  1 º dcha.<br> 
+		&nbsp;C/ Marques de Paradas nÂº 22  1 Âº dcha.<br> 
 		41001 SEVILLA
 	</div>
 	<div id="e18" class="cc119">
-		Clínica Dental<br> 
-		PATROCINIO GÓMEZ MARTÍNEZ
+		ClÃ­nica Dental<br> 
+		PATROCINIO GÃ“MEZ MARTÃNEZ
 	</div>
 	<div id="e17" class="cc120">
 		Lunes a Viernes<br> 
-		9:30 de la Mañana<br> 
+		9:30 de la MaÃ±ana<br> 
 		A <br> 
 		9:30 de la Noche
 	</div>
@@ -54,7 +54,7 @@
 		TARDES de 4:00 a 9:30<br> 
 		<br> 
 		Viernes<br> 
-		MAÑANAS de 9:00 a 2:00
+		MAÃ‘ANAS de 9:00 a 2:00
 	</div>
 	<h4 id="e15" class="page_tag">
 		CONSULTA
@@ -68,14 +68,14 @@
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img10,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img10,0,0)">
 		<img id="e10" name="e10" src="b-norm2.gif" title="" alt="b-norm2.gif" align="right" border="0"></a>
 	<div id="e9" class="cc122">
-		ATM (Problemas de Articulación)
+		ATM (Problemas de ArticulaciÃ³n)
 	</div>
 	<div id="e8" class="info">
-		Deberán ustedes saber que muchos dolores de cabeza, contracturas cervicales, alteraciones posturales etc., pueden ser causados por una mordida desequilibrada.<br> 
+		DeberÃ¡n ustedes saber que muchos dolores de cabeza, contracturas cervicales, alteraciones posturales etc., pueden ser causados por una mordida desequilibrada.<br> 
 		<br> 
-		El dolor facial y de la mandíbula por la mañana puede indicar un bruxismo nocturno (rechinar los dientes). Los ruidos de la articulación temporo-mandibular, pueden indicar un problema estructural de la articulación.<br> 
+		El dolor facial y de la mandÃ­bula por la maÃ±ana puede indicar un bruxismo nocturno (rechinar los dientes). Los ruidos de la articulaciÃ³n temporo-mandibular, pueden indicar un problema estructural de la articulaciÃ³n.<br> 
 		<br> 
-		En muchos casos un simple balanceo de la mordida (ajuste oclusal) puede dar un descanso inmediato. El método mas usado para conseguir esta relajación inmediata es la férula de descarga. Es un aparato removible de acrílico que se diseña a medida, normalmente en los dientes superiores, y se ajusta a una posición articular fisiológica. Los dientes opuestos golpean en el acrílico creando una mordida muy confortable y atraumática. 
+		En muchos casos un simple balanceo de la mordida (ajuste oclusal) puede dar un descanso inmediato. El mÃ©todo mas usado para conseguir esta relajaciÃ³n inmediata es la fÃ©rula de descarga. Es un aparato removible de acrÃ­lico que se diseÃ±a a medida, normalmente en los dientes superiores, y se ajusta a una posiciÃ³n articular fisiolÃ³gica. Los dientes opuestos golpean en el acrÃ­lico creando una mordida muy confortable y atraumÃ¡tica. 
 	</div>
 	<span id="e7"></span>
 	<div id="e6" class="cc123">
